# RayTracer

./: .gitignore  Bitmap.cpp  Bitmap.h  CMakeLists.txt  README.md  main.cpp
generic/: Debug.cpp  Debug.h  defines.h
math/: Color.cpp  Color.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h  Ray3.cpp  Ray3.h  Vec3.cpp  Vec3.h  misc.h
objects/: Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  Plane.cpp  Plane.h  Solid.cpp  Solid.h  Sphere.cpp  Sphere.h
visual/: Material.cpp  Material.h
